--- a/Exploro/src/app/pages/profilo/profilo.page.html
+++ b/Exploro/src/app/pages/profilo/profilo.page.html
@@ -21,7 +21,10 @@
 
   <ion-item lines="none">
     <p>0</p>
-    <ion-progress-bar value=".48" color="warning"></ion-progress-bar>
+    <ion-progress-bar
+      value="{{geocacher.puntiExp*0.01}}"
+      color="warning"
+    ></ion-progress-bar>
     <p>100</p>
   </ion-item>
 
