header aggiunto a tutte le schermate

--- a/Exploro/src/app/pages/admin/admin.page.html
+++ b/Exploro/src/app/pages/admin/admin.page.html
@@ -1,12 +1,14 @@
-<ion-toolbar>
-  <ion-title>Area amministratore</ion-title>
-  <ion-icon
-    name="log-out"
-    slot="end"
-    routerLink=""
-    class="torna-home"
-  ></ion-icon>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Area amministratore</ion-title>
+    <ion-icon
+      name="log-out"
+      slot="end"
+      routerLink=""
+      class="torna-home"
+    ></ion-icon>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
   <div class="centrato">
