--- a/Exploro/src/app/pages/admin/richieste-approvazione/richieste-approvazione.page.html
+++ b/Exploro/src/app/pages/admin/richieste-approvazione/richieste-approvazione.page.html
@@ -1,9 +1,11 @@
-<ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="admin"></ion-back-button>
-  </ion-buttons>
-  <ion-title>Richieste approvazione</ion-title>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="admin"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Richieste approvazione</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
   <div style="display: flex">
