--- a/Exploro/src/app/pages/admin/utenti-registrati/scheda-utente/scheda-utente.page.html
+++ b/Exploro/src/app/pages/admin/utenti-registrati/scheda-utente/scheda-utente.page.html
@@ -1,9 +1,11 @@
-<ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="admin/utenti-registrati"></ion-back-button>
-  </ion-buttons>
-  <ion-title>Scheda {{utente.nome}} {{utente.cognome}}</ion-title>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="admin/utenti-registrati"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Scheda {{utente.nome}} {{utente.cognome}}</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content color="primary">
   <ion-card>
