--- a/Exploro/src/app/pages/classifica/dettagli-utente/dettagli-utente.page.html
+++ b/Exploro/src/app/pages/classifica/dettagli-utente/dettagli-utente.page.html
@@ -1,9 +1,11 @@
-<ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="classifica"></ion-back-button>
-  </ion-buttons>
-  <ion-title>utenteSel: {{utenteSel.username}}</ion-title>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="classifica"></ion-back-button>
+    </ion-buttons>
+    <ion-title>utenteSel: {{utenteSel.username}}</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
   <ion-item lines="none">
