--- a/Exploro/src/app/pages/registration/registration.page.html
+++ b/Exploro/src/app/pages/registration/registration.page.html
@@ -1,9 +1,11 @@
-<ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="login"></ion-back-button>
-  </ion-buttons>
-  <ion-title>Registrazione</ion-title>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="login"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Registrazione</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content color="primary">
   <div class="formRegistration">
