--- a/Exploro/src/app/pages/admin/lista-cache/lista-cache.page.html
+++ b/Exploro/src/app/pages/admin/lista-cache/lista-cache.page.html
@@ -1,10 +1,11 @@
-<ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="admin"></ion-back-button>
-  </ion-buttons>
-  <ion-title>Lista Cache</ion-title>
-</ion-toolbar>
-
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="admin"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Lista Cache</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
   <ion-searchbar
     mode="ios"
