--- a/Exploro/src/app/pages/admin/richieste-approvazione/dettagli-cache/dettagli-cache.page.html
+++ b/Exploro/src/app/pages/admin/richieste-approvazione/dettagli-cache/dettagli-cache.page.html
@@ -1,9 +1,11 @@
-<ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="richieste-approvazione"></ion-back-button>
-  </ion-buttons>
-  <ion-title>Dettagli Cache: {{cache.nome}}</ion-title>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="richieste-approvazione"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Dettagli Cache: {{cache.nome}}</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content [fullscreen]="true">
   <div class="formLallero">
