--- a/Exploro/src/app/pages/admin/utenti-registrati/utenti-registrati.page.html
+++ b/Exploro/src/app/pages/admin/utenti-registrati/utenti-registrati.page.html
@@ -1,9 +1,11 @@
-<ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="admin"></ion-back-button>
-  </ion-buttons>
-  <ion-title>Utenti registrati</ion-title>
-</ion-toolbar>
+<ion-header
+  ><ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="admin"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Utenti registrati</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
   <ion-searchbar
