--- a/Exploro/src/app/pages/homepage/homepage.page.html
+++ b/Exploro/src/app/pages/homepage/homepage.page.html
@@ -1,7 +1,9 @@
-<ion-toolbar>
-  <ion-menu-button slot="start" menu="menu-laterale"> </ion-menu-button>
-  <ion-title>Homepage</ion-title>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-menu-button slot="start" menu="menu-laterale"> </ion-menu-button>
+    <ion-title>Homepage</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <div style="display: flex; align-items: center">
   <ion-button
