--- a/Exploro/src/app/pages/login/login.page.html
+++ b/Exploro/src/app/pages/login/login.page.html
@@ -1,6 +1,8 @@
-<ion-toolbar>
-  <ion-title>Login</ion-title>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Login</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
   <div class="formLogin">
