molte sistemazioni sium

--- a/Exploro/src/app/pages/admin/admin.page.html
+++ b/Exploro/src/app/pages/admin/admin.page.html
@@ -15,5 +15,6 @@
     <button routerLink="utenti-registrati">Utenti registrati</button>
     <button routerLink="lista-cache">Lista Cache</button>
     <button routerLink="richieste-approvazione">Richieste approvazione</button>
+    <button routerLink="aggiungi-admin">Aggiungi Admin</button>
   </div>
 </ion-content>
