--- a/Exploro/src/app/pages/login/login.page.html
+++ b/Exploro/src/app/pages/login/login.page.html
@@ -18,7 +18,7 @@
         <form #formLogin="ngForm" (ngSubmit)="Login(formLogin)">
           <ion-list>
             <ion-item>
-              <ion-label position="floating">username</ion-label>
+              <ion-label position="floating">Username</ion-label>
               <ion-input
                 name="username"
                 type="text"
